# Discorp

./: .gitignore  CMakeLists.txt  build.sh  install_dependencies.sh  proto_build.sh  test.sh
data/: data.json
dcl/: main.cpp  main2.cpp
dcl/api/: CMakeLists.txt
dcl/api/include/api/: api_interactions.hpp  bootstraps.hpp  button.hpp  button_bootstrap.hpp  command.hpp  command_bootstrap.hpp  list.hpp  request.hpp
dcl/api/src/: bootstraps.cpp  button_bootstrap.cpp  command_bootstrap.cpp  request.cpp
dcl/core/: CMakeLists.txt
dcl/core/include/core/: dcl_interactions.hpp  dcl_items.hpp  dcl_map.hpp  game_logic.hpp  game_manager.hpp  interaction_wrappers.hpp
dcl/core/include/core/api/: game_action.hpp
dcl/core/include/core/db/: db_handler.hpp  db_operation.hpp  db_write.hpp
dcl/core/include/core/entities/: user.hpp
dcl/core/include/core/pb/: combat.pb.cc  combat.pb.h  interaction.pb.cc  interaction.pb.h  item.pb.cc  item.pb.h  location.pb.cc  location.pb.h  map.pb.cc  map.pb.h  player.pb.cc  player.pb.h
dcl/core/include/entities/: interaction.hpp  location.hpp  player.hpp
dcl/core/src/: db_handler.cpp  dcl_map.cpp  game_logic.cpp  game_manager.cpp
dcl/core/src/api/: game_manager.cpp
dcl/core/src/db/: db_handler.cpp  db_query.cpp  db_write.cpp
dcl/core/src/entities/: interaction.cpp  location.cpp  player.cpp  user.cpp
dcl/db/: CMakeLists.txt
dcl/db/include/: db_instance.hpp  db_operation.hpp  db_query_operations.hpp  db_write.hpp
dcl/db/include/db/: db_config.hpp  db_instance.hpp  db_operation.hpp  db_query_operations.hpp  db_write.hpp
dcl/db/src/: db_query_operations.cpp  db_write.cpp
dcl/db_handler/: CMakeLists.txt
dcl/db_handler/include/db_handler/: db_combat.hpp  db_handler.hpp  db_inventory.hpp  db_location.hpp  db_user.hpp
dcl/db_handler/include/db_handler/entities/: interaction.hpp  inventory.hpp  player.hpp  user.hpp
dcl/db_handler/src/: db_combat.cpp  db_handler.cpp  db_inventory.cpp  db_location.cpp  db_user.cpp
dcl/db_handler/src/entities/: interaction.cpp  inventory.cpp  player.cpp  user.cpp
dcl/img/: CMakeLists.txt
dcl/img/include/img/: gd_io_stream.hpp  gdpp.hpp  image.hpp  renderer.hpp
dcl/img/src/: gd_io_stream.cpp  gdpp.cpp  image.cpp  renderer.cpp
dcl/img/src/gdpp/: gd_io_stream.cpp  gdpp.cpp
dcl/util/: CMakeLists.txt  resource_loader.cpp  resource_loader.hpp
dcl/util/include/util/: resource_loader.hpp
deployment/: Dockerfile  info.txt
legacy/business/objects/: object.cpp  user.cpp
legacy/business/objects/include/: object.h
legacy/commands/: login.cpp
legacy/commands/include/: login.h
resources/: test.json
resources/data/: 0_main_base.json  1_forest.json
resources/data/items/: 0_resource_items.json  1_consumables_items.json  2_equipables_items.json  2_weapons_items.json  3_equipables_items.json  4_quest_items.json  resource_items.json
resources/data/locations/: 0_MainBase.json  0_main_base.json  1_Forest_Lvl1.json  1_Mine_Lvl1.json  1_guild.json  1_guild_entrance_west copy.json  1_guild_entrance_west.json  2_guild.json  2_town.json  3_forest_1.json  3_mines_entrance.json
resources/data/old_data/: 0_main_base.json  1_path1.json  2_town.json
resources/data/posts/: 0_bushes.json  1_pebbles.json  pebbles.json
resources/data_old/locations/: 1_Forest_Lvl1.json
resources/proto/: combat.proto  interaction.proto  item.proto  location.proto  map.proto  player.proto
src/: CMakeLists.txt  discorp_config.hpp  main.cpp  main2.cpp
src/api/: command_bootstrap.cpp
src/api/include/: command.hpp  command_bootstrap.hpp
src/business/: game_action.cpp  game_manager.cpp  game_manager.hpp  plant_manager.cpp
src/business/include/: game_action.hpp  game_constants.hpp  game_manager.hpp  plant_manager.hpp
src/business/objects/include/: inventory.h  user.h
src/commands/: send_image.cpp  test1.cpp
src/commands/include/: command.h  send_image.h  test1.h
src/core/include/core/: core_func.hpp
src/core/src/: core_func.cpp
src/database/: db_access.cpp  db_access.hpp  db_farm_handler.cpp  db_handler.cpp  db_instance.hpp  db_query.cpp  db_rw.cpp  db_user_handler.cpp  db_user_handler.hpp  db_write.cpp
src/database/include/: db_access.hpp  db_farm_handler.hpp  db_handler.hpp  db_operation.hpp  db_query.hpp  db_rw.hpp  db_user_handler.hpp  db_write.hpp
src/entities/: entities.hpp  farm.cpp  location.cpp  player.cpp  user.cpp  user.hpp
src/entities/include/: entities.hpp  farm.hpp  field.hpp  location.hpp  plant.hpp  player.hpp  user.hpp
src/util/: resource_loader.cpp  resource_loader.hpp
test/: core_test.cpp  core_user.cpp  database.cpp  db_handler_test.cpp  db_proto_test.cpp  db_test.cpp  dbhandler.cpp  game.cpp  gametests.cpp  image_test.cpp  proto_test.cpp  setup.cpp  start_command.cpp
test/data/: test_1.json  test_2_fail.json
tests/: CMakeLists.txt  test.sh
tests/src/inventory/: test001.cpp
